closes #40; Fix no wrap navbar

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,17 @@ footer{
 /* Mobile */
 @media (max-width:768px)
 {
+    /* header, navbar */
+    .navbar-brand{
+        font-size: larger;
+    }
+
+    .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, 
+    .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl
+    {
+        flex-wrap: nowrap;
+    }
+
     /* content - skills */
     .col-skills-content {
         justify-content: center;
@@ -275,7 +286,12 @@ footer{
         flex-direction: row-reverse;
     }
 
-    .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl
+    .navbar-brand{
+        font-size: larger;
+    }
+
+    .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, 
+    .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl
     {
         flex-wrap: nowrap;
     }
